fix overflow

--- a/src/components/Tasks/Todo.css
+++ b/src/components/Tasks/Todo.css
@@ -1,4 +1,4 @@
-.task__card { 
+.task__card {
   width: 15rem;
   height: 10rem;
   border-radius: 1rem;
@@ -15,7 +15,7 @@
   background-color: var(--medium-blue);
 }
 
-.task__card__main { 
+.task__card__main {
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -28,7 +28,7 @@
   background-color: var(--medium-blue);
 }
 
-.task__card__title{
+.task__card__title {
   padding: 0 1rem;
   width: 15rem;
   color: var(--text);
@@ -36,30 +36,21 @@
   font-size: 1.5rem;
   font-weight: 500;
   height: 80%;
-  overflow-x: hidden;
+  overflow: hidden;
   word-wrap: break-word;
   resize: none;
   text-align: center;
   outline: none;
 }
 
-/* .task__card__description{
-  color: var(--text);
-  font-size: 1rem;
-  padding: 5px;
-  resize: none;
-  height: 4rem;
-  background: none;
-  word-wrap: break-word;
-} */
-
-.task__card__actions{
+.task__card__actions {
   display: flex;
   justify-content: center;
   gap: 4px;
 }
 
-.delete, .edit{
+.delete,
+.edit {
   border-radius: 8px;
   cursor: pointer;
   background: none;
@@ -68,7 +59,7 @@
   transition: 0.2s;
 }
 
-.delete:hover{
+.delete:hover {
   background-color: var(--success);
   color: var(--light-blue);
 }
@@ -77,4 +68,3 @@
   background-color: var(--dark-gray);
   color: var(--light-blue);
 }
-
